--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -6,7 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[[bin]]
-name = "day_1"
-path = "src/day_1/main.rs"
+clap = { version = "4.4.11", features = ["derive"] }
